[gd_scene load_steps=18 format=3 uid="uid://bcjst2l1ryhdg"]

[ext_resource type="Script" uid="uid://7e2uoofk2vjw" path="res://prefabs/tooth_button/tooth_button.gd" id="1_1ri0u"]
[ext_resource type="Texture2D" uid="uid://cejtpw318ss2f" path="res://assets/prototyping/tooth-prototype-Sheet.png" id="1_edi1c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1ri0u"]
atlas = ExtResource("1_edi1c")
region = Rect2(0, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bgh2"]
atlas = ExtResource("1_edi1c")
region = Rect2(100, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh4dv"]
atlas = ExtResource("1_edi1c")
region = Rect2(200, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6qs4"]
atlas = ExtResource("1_edi1c")
region = Rect2(0, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpxx1"]
atlas = ExtResource("1_edi1c")
region = Rect2(100, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dky0a"]
atlas = ExtResource("1_edi1c")
region = Rect2(200, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4tt3"]
atlas = ExtResource("1_edi1c")
region = Rect2(300, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fm5r"]
atlas = ExtResource("1_edi1c")
region = Rect2(400, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oqm5"]
atlas = ExtResource("1_edi1c")
region = Rect2(400, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8eun"]
atlas = ExtResource("1_edi1c")
region = Rect2(300, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyn1v"]
atlas = ExtResource("1_edi1c")
region = Rect2(200, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_33tvy"]
atlas = ExtResource("1_edi1c")
region = Rect2(100, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t3rp"]
atlas = ExtResource("1_edi1c")
region = Rect2(0, 0, 100, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_s8oo4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ri0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bgh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh4dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bgh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ri0u")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6qs4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpxx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dky0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4tt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fm5r")
}],
"loop": false,
"name": &"extend",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oqm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8eun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyn1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33tvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t3rp")
}],
"loop": false,
"name": &"retract",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3bgh2"]
size = Vector2(90, 152)

[node name="Tooth Button" type="Node2D" node_paths=PackedStringArray("anim")]
script = ExtResource("1_1ri0u")
anim = NodePath("AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s8oo4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, -4)
shape = SubResource("RectangleShape2D_3bgh2")

[node name="Button" type="Button" parent="."]
offset_left = -41.615
offset_top = -79.925
offset_right = 48.55
offset_bottom = 72.015
mouse_filter = 1
flat = true
metadata/_edit_use_anchors_ = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
